fdo#73034: Fix for Extra spacing in document.

Cause:
 - Extra space gets added in document due to default <rPr>
   is getting removed from <pPr>.
Implementation:
 - The 'rPr' inside 'pPr' means the properties of the 'paragraph marker'.
 - In that case - the paragraph marker will have different formatting then
   the rest of the runs in the paragraph.
 - Added default rpr tag in pPr.

Reviewed on:
	https://gerrit.libreoffice.org/7216

Change-Id: I5a1a1f251ccc5b555ea6bf3bac3e69af8b2b69b5