sw/source/filter/ww8/docxattributeoutput.cxx
@@ -80,6 +80,7 @@
 #include <svl/grabbagitem.hxx>
 #include <sfx2/sfxbasemodel.hxx>
 #include <tools/datetimeutils.hxx>
+#include <svl/whiter.hxx>
 
 #include <docufld.hxx>
 #include <flddropdown.hxx>
@@ -554,7 +555,7 @@ void DocxAttributeOutput::WriteCollectedParagraphProperties()
     }
 }
 
-void DocxAttributeOutput::EndParagraphProperties( const SwRedlineData* pRedlineData, const SwRedlineData* pRedlineParagraphMarkerDeleted, const SwRedlineData* pRedlineParagraphMarkerInserted )
+void DocxAttributeOutput::EndParagraphProperties( const boost::shared_ptr<SfxItemSet> pParagraphMarkerProperties, const SwRedlineData* pRedlineData, const SwRedlineData* pRedlineParagraphMarkerDeleted, const SwRedlineData* pRedlineParagraphMarkerInserted)
 {
     // Call the 'Redline' function. This will add redline (change-tracking) information that regards to paragraph properties.
     // This includes changes like 'Bold', 'Underline', 'Strikethrough' etc.
@@ -563,11 +564,45 @@ void DocxAttributeOutput::EndParagraphProperties( const SwRedlineData* pRedlineD
     WriteCollectedParagraphProperties();
 
     // Write 'Paragraph Mark' properties
-    bool bIsParagraphMarkProperties = false; // In future - get the 'paragraph marker' properties as a parameter
-    if (bIsParagraphMarkProperties || pRedlineParagraphMarkerDeleted || pRedlineParagraphMarkerInserted)
+    if ( pRedlineParagraphMarkerDeleted || pRedlineParagraphMarkerInserted || pParagraphMarkerProperties)
     {
         m_pSerializer->startElementNS( XML_w, XML_rPr, FSEND );
 
+        if(pParagraphMarkerProperties)
+        {
+            SfxWhichIter aIter( *pParagraphMarkerProperties );
+            sal_uInt16 nWhichId = aIter.FirstWhich();
+            const SfxPoolItem* pItem = 0;
+            while( nWhichId )
+            {
+                if( SFX_ITEM_SET == pParagraphMarkerProperties->GetItemState( nWhichId, sal_True, &pItem ))
+                {
+                    SAL_INFO( "sw.ww8", "nWhichId " << nWhichId);
+                    OutputItem( *pItem );
+                }
+                nWhichId = aIter.NextWhich();
+            }
+
+            // The 'm_pFontsAttrList', 'm_pEastAsianLayoutAttrList', 'm_pCharLangAttrList' are used to hold information
+            // that should be collected by different properties in the core, and are all flushed together
+            // to the DOCX when the function 'WriteCollectedRunProperties' gets called.
+            // So we need to store the current status of these lists, so that we can revert back to them when
+            // we are done exporting the redline attributes.
+            ::sax_fastparser::FastAttributeList *pFontsAttrList_Original           = m_pFontsAttrList;
+            ::sax_fastparser::FastAttributeList *pEastAsianLayoutAttrList_Original = m_pEastAsianLayoutAttrList;
+            ::sax_fastparser::FastAttributeList *pCharLangAttrList_Original        = m_pCharLangAttrList;
+            m_pFontsAttrList           = NULL;
+            m_pEastAsianLayoutAttrList = NULL;
+            m_pCharLangAttrList        = NULL;
+
+            // Write the collected run properties that are stored in 'm_pFontsAttrList', 'm_pEastAsianLayoutAttrList', 'm_pCharLangAttrList'
+            WriteCollectedRunProperties();
+
+            // Revert back the original values that were stored in 'm_pFontsAttrList', 'm_pEastAsianLayoutAttrList', 'm_pCharLangAttrList'
+            m_pFontsAttrList           = pFontsAttrList_Original;
+            m_pEastAsianLayoutAttrList = pEastAsianLayoutAttrList_Original;
+            m_pCharLangAttrList        = pCharLangAttrList_Original;
+        }
         if ( pRedlineParagraphMarkerDeleted )
         {
             StartRedline( pRedlineParagraphMarkerDeleted );
