sw/source/filter/ww8/wrtw8nds.cxx
@@ -2426,11 +2426,34 @@ void MSWordExportBase::OutputTextNode( const SwTxtNode& rNode )
                 delete pNewSet;
         }
     }
-
+    boost::shared_ptr<SfxItemSet> sfxItemSet ;
+    if(const SwpHints* pTxtAttrs = rNode.GetpSwpHints())
+    {
+        for( sal_uInt16 i = 0; i < pTxtAttrs->Count(); i++ )
+        {
+            const SwTxtAttr* pHt = (*pTxtAttrs)[i];
+            const sal_Int32* startPos = pHt->GetStart();    // first Attr characters
+            const sal_Int32* endPos = pHt->End();    // end Attr characters
+            // Check if these attributes are for the last character in the paragraph
+            // - which means the paragraph marker. If a paragraph has 7 characters,
+            // then properties on character 8 are for the paragraph marker
+            if( (startPos && endPos) && (*startPos == *endPos ) && (*endPos == rNode.GetTxt().getLength()) )
+            {
+                SAL_INFO( "sw.ww8", *startPos << "startPos == endPos" << *endPos);
+                sal_uInt16 nWhich = pHt->GetAttr().Which();
+                SAL_INFO( "sw.ww8", "nWhich" << nWhich);
+                if (nWhich == RES_TXTATR_AUTOFMT)
+                {
+                    const SwFmtAutoFmt& rAutoFmt = static_cast<const SwFmtAutoFmt&>(pHt->GetAttr());
+                    sfxItemSet = rAutoFmt.GetStyleHandle();
+                }
+            }
+        }
+    }
     const SwRedlineData* pRedlineParagraphMarkerDelete = AttrOutput().GetParagraphMarkerRedline( rNode, nsRedlineType_t::REDLINE_DELETE );
     const SwRedlineData* pRedlineParagraphMarkerInsert = AttrOutput().GetParagraphMarkerRedline( rNode, nsRedlineType_t::REDLINE_INSERT );
     const SwRedlineData* pParagraphRedlineData = aAttrIter.GetParagraphLevelRedline( );
-    AttrOutput().EndParagraphProperties( pParagraphRedlineData, pRedlineParagraphMarkerDelete, pRedlineParagraphMarkerInsert );
+    AttrOutput().EndParagraphProperties( sfxItemSet, pParagraphRedlineData, pRedlineParagraphMarkerDelete, pRedlineParagraphMarkerInsert);
 
     AttrOutput().EndParagraph( pTextNodeInfoInner );
 
